--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -9,3 +9,4 @@
 Compare error of all sensor configs, but seperated by distance (eg. 1-3 meters, 3-5 meters, etc.) and find if log-1 is better in all distances or not
 verifier si il y a une correelation entre les raws pas de signal et un autre parametre que la distance
 investiguer les oscillations de temperastuure
+Faire script qui calcul l'erreur par rapport au loadcell, moyenne et par distance, pour pouvoir facilement avoir une métrique d'erreur pour voir si nos résultats s'améliore en changeant de config/méthode
