--- a/todo/todo.txt
+++ b/todo/todo.txt
@@ -1,5 +1,5 @@
-(C) Verify/fix algo to work on low resolution raw data
-(C) Continue smoothing algos exploration: refine spike detection, make all filters more easily chainable, explore more options: gregstanleyandassociates.com/whitepapers/FaultDiagnosis/filtering
-(B) Start project on disease detection using loadcell data on Avinor: detect a decrease in food consumption of 30% or more for 2 days. Use both silos A and B conjunctly to determine rate of consumption and start/end of chicken cycles
-(A) Refine/rethink the algo to change acquisition parameters of the device (gain, current, pulse) 
-(B) Work on empty silo detection on Isoporc
+(!!) Is the main bang end in avinor dashboard good? Does it need to be x2?
+(!!) Check how the algo handles when the max signal is after the max distance
+     Work on empty silo detection on Isoporc
+ (!) Restart the project to predict the next silo fill on isoporc data
+ (!) Check why there are two raw data that gives different gain_quality results with subsample by 2
